# spartid-pubtransport

./: .dockerignore  .gitignore  Caddyfile  Dockerfile.api  Dockerfile.poller  Dockerfile.streamlit  Justfile  MODEL.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml
integration_tests/: test_int_gtfs_download.py
notebooks/: adhoc.ipynb  explore_poller.ipynb  explore_quyas.ipynb  explore_stop_places.ipynb  explore_vehicle_monitoring.ipynb  gtfs_duckdb.ipynb  gtfs_duckdb_shapes_simplify.ipynb  gtfs_explore.ipynb  gtfs_map.ipynb  gtfs_relations_shapes.ipynb  poller_to_parquet.ipynb  poller_to_parquet_duckdb.ipynb  siri_gtfs_realtime_pos.ipynb
spartid_pubtransport/: estimatedtimetable.py  gtfs.py  poller.py  siri.py  vehiclemonitoring.py
spartid_pubtransport/api/: api.py  db_utils.py  fetch_et_to_duckdb.py  interpolate_vehicle_positions.py  migrate_to_ducklake.py
spartid_pubtransport/stapp/: stapp.py
spartid_pubtransport/stapp/pages/: histmapone.py  live.py  liveet.py  shapes.py
static/: index.html
tests/: test_exists.py
